Changed hierarchy to allow for more expressions besides query