@@ -12,6 +12,7 @@ import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.xpack.esql.core.expression.Expression;
+import org.elasticsearch.xpack.esql.core.expression.TypeResolutions;
 import org.elasticsearch.xpack.esql.core.querydsl.query.MatchQuery;
 import org.elasticsearch.xpack.esql.core.querydsl.query.Query;
 import org.elasticsearch.xpack.esql.core.querydsl.query.QueryStringQuery;
@@ -20,9 +21,15 @@ import org.elasticsearch.xpack.esql.core.tree.Source;
 import org.elasticsearch.xpack.esql.expression.function.Example;
 import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
 import org.elasticsearch.xpack.esql.expression.function.Param;
+import org.elasticsearch.xpack.esql.io.stream.PlanStreamInput;
 
 import java.io.IOException;
 import java.util.List;
+
+import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.ParamOrdinal.FIRST;
+import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.ParamOrdinal.SECOND;
+import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.isNotNull;
+import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.isString;
 
 /**
  * Full text function that performs a {@link QueryStringQuery} .
@@ -56,19 +63,19 @@ public class MatchFunction extends FullTextFunction {
             description = "Query string in Lucene query string format."
         ) Expression matchQuery
     ) {
-        super(source, matchQuery);
+        super(source, matchQuery, field);
         this.field = field;
     }
 
     private MatchFunction(StreamInput in) throws IOException {
-        super(in);
-        field = in.readNamedWriteable(Expression.class);
+        this(Source.readFrom((PlanStreamInput) in), in.readNamedWriteable(Expression.class), in.readNamedWriteable(Expression.class));
     }
 
     @Override
     public void writeTo(StreamOutput out) throws IOException {
-        super.writeTo(out);
+        source().writeTo(out);
         out.writeNamedWriteable(field);
+        out.writeNamedWriteable(query());
     }
 
     @Override
@@ -91,8 +98,14 @@ public class MatchFunction extends FullTextFunction {
     }
 
     @Override
+    protected TypeResolution doResolveType() {
+        return isNotNull(field, functionName(), FIRST).and(isString(field, functionName(), FIRST)).and(super.doResolveType());
+    }
+
+    @Override
     public Expression replaceChildren(List<Expression> newChildren) {
-        return new MatchFunction(source(), newChildren.get(0), newChildren.get(1));
+        // Query is the first child, field is the second child
+        return new MatchFunction(source(), newChildren.get(1), newChildren.getFirst());
     }
 
     @Override
@@ -103,5 +116,9 @@ public class MatchFunction extends FullTextFunction {
     @Override
     public String getWriteableName() {
         return ENTRY.name;
+    }
+
+    protected TypeResolutions.ParamOrdinal queryParamOrdinal() {
+        return SECOND;
     }
 }
